# conodictor

./: .gitignore  Dockerfile  README  README.md  conodictor  conodictor.h3m  pyproject.toml  requirements.txt  test.py  tt.txt
.config/matplotlib/: fontlist-v330.json
.github/workflows/: codeql-analysis.yml  workflow.yml
conare/: summary.txt
conodictor/: cli.py  conodictor.py  conolib.py
db/: cono.hmm  conodictor.hmm  conodictor.pssm
db/HMM/: A.hmm  B.hmm  D.hmm  I1.hmm  I2.hmm  I3.hmm  L.hmm  M.hmm  O1.hmm  O2.hmm  O3.hmm  R.hmm  S.hmm  T.hmm
db/PSSM/: A.prf  B.prf  D.prf  I1.prf  I2.prf  I3.prf  L.prf  M.prf  O1.prf  O2.prf  O3.prf  R.prf  S.prf  T.prf
otrf/: summary.txt  test.fas
test/: test.fa  test.fa.fxi  test.fas.fxi  test.fas.gz.fxi  test_set.fa  test_set.fa.fxi  test_set.fa.gz.fxi  test_set.hmmer  testset.fa.gz.fxi
test2/: filtfa.fa  summary.txt
tests/: test.fa.bz2  test.fa.xz  test_conolib.py
utils/: __init__.py
