[tool.poetry]
name = "conodictor"
version = "2.3.1"
description = "Prediction and classification of conopeptides"
authors = ["Anicet Ebou <anicet.ebou@gmail.com>", "Dominique Koua <koua.dominique@gmail.com"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.8.0"
colorlog = "^6.5.0"
pyfastx = "^0.8.4"
argparse = "^1.4.0"
bio = "^1.2.6"
DateTime = "^4.3"
matplotlib = "^3.4.3"
pandas = "^1.3.3"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
