[tool.poetry]
name = "conodictor"
version = "2.3.6"
description = "Prediction and classification of conopeptides"
authors = ["Anicet Ebou <anicet.ebou@gmail.com>", "Dominique Koua <dominique.koua@inphb.ci>"]
maintainers = ["Anicet Ebou <anicet.ebou@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/koualab/conodictor"
repository = "https://github.com/koualab/conodictor"
documentation = "https://github.com/koualab/conodictor"
keywords = ["bioinformatics", "classification", "prediction", "conopeptides"]
classifiers = [
            "Development Status :: 5 - Production/Stable",
            "Intended Audience :: Developers",
            "Intended Audience :: Education",
            "Intended Audience :: Science/Research",
            "Natural Language :: English",
            "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
            "Programming Language :: Python :: 3.8",
            "Programming Language :: Python :: 3.9",
            "Operating System :: Microsoft :: Windows",
            "Operating System :: POSIX :: Linux",
            "Operating System :: Unix",
            "Topic :: Scientific/Engineering :: Bio-Informatics"
]
include = ["db/*"]

[tool.poetry.dependencies]
python = "^3.8"
bio = "^1.3.3"
matplotlib = "^3.5.1"
pandas = "^1.3.5"
pyfastx = "^0.8.4"
exitstatus = "^2.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"

[tool.poetry.scripts]
conodictor = "conodictor.conodictor:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
